7260: Fixed video overflow

--- a/assets/shared/templates/video/video.scss
+++ b/assets/shared/templates/video/video.scss
@@ -1,8 +1,11 @@
 .template-video {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+
   .video-container {
     width: auto;
     height: 100%;
-    overflow: hidden;
   }
 
   video {
